<resources>
    <string name="app_name">BankProject2</string>
    <string name="loginText">Login</string>
    <string name="signUpText">SignUp</string>
    <string name="email_text">Input Email</string>
    <string name="password_text">Input Password</string>
    <string name="loginButton_text">Login</string>
    <string name="signUpButton_text">SignUp</string>
    <string name="fname_text">Input first name</string>
    <string name="lname_text">Input Last name</string>
    <string name="phone_text">Input Phone Number</string>
    <string name="emailText">Input Email </string>

    <string-array name="transection_service">
        <item>bKash</item>
        <item>Rokect</item>
        <item>Nagad</item>
        <item>Paypal</item>
        <item>Webmoney</item>
    </string-array>

    <string-array name="operator_name">
        <item>GrameenPhone</item>
        <item>Robi</item>
        <item>Teletalk</item>
        <item>Airtel</item>
        <item>Banglalink</item>
    </string-array>

    <string-array name="utility_name">
        <item>WASA</item>
        <item>BAPEX</item>
        <item>DESCO</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">DashBoard</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_transfer">Transfer</string>
</resources>