<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.bankproject2.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_deposit"
        android:name="com.example.bankproject2.ui.gallery.GalleryFragment"
        android:label="@string/menu_deposit"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_transfer"
        android:name="com.example.bankproject2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_transfer"
        tools:layout="@layout/fragment_slideshow" />
</navigation>