<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwoedId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/login_Button_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton_text"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="#077AAF"
        />
     <Button
        android:id="@+id/signUp_Button_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpButton_text"
        android:textSize="20sp" android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
        android:backgroundTint="#08AA68"
        />



</LinearLayout>

</ScrollView>